--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <p>An enthusiastic self-motivated individual with a passion for technology! I love learning new systems and tools. I currently work at San Diego Gas and Electric as an Information Technologist in the Collaboration Services department.</p>
 
-        <p>I aspire become a software developer role after completion of the UCSD bootcamp!</p>
+        <p>I aspire to transition to a software developer role after completion of the UCSD bootcamp!</p>
 
       </section>
 
